@@ -1,11 +1,28 @@
-/***************************************************************************/
-/*                                                                         */
-/*                             result_list.c                               */
-/* Original code written by Daniel Hawkins. Last modified on 2016-01-11.   */
-/*                                                                         */
-/* Implements the routines for storing results in a linked list.           */
-/*                                                                         */
-/***************************************************************************/
+/*
+    FilePeruser, a recursive file search utility.
+    Copyright (C) 2014-2016  SilverNexus
+
+    This program is free software; you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation; either version 2 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program; if not, write to the Free Software
+    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+*/
+
+/**
+ * @file result_list.c
+ * Last modified on 2016-01-11 by Daniel Hawkins.
+ *
+ * Implements the routines for storing results in a linked list.
+ */
 
 #include "result_list.h"
 #include <stdlib.h>
