@@ -1,11 +1,9 @@
-/***************************************************************************/
-/*                                                                         */
-/*                                search.h                                 */
-/* Original code written by Daniel Hawkins. Last modified on 2016-01-25.   */
-/*                                                                         */
-/* The file defines several searching functions' prototypes.               */
-/*                                                                         */
-/***************************************************************************/
+/**
+ * @file search.h
+ * Last modified on 2016-01-25 by Daniel Hawkins.
+ *
+ * The file defines several searching functions' prototypes.
+ */
 
 #ifndef SEARCH_H
 #define SEARCH_H
